/**
 * Thread that makes "chat" between two UniversityStudent instances possible.
 */
public class ChatThread implements Runnable {
    /**
     * Constructor for a new ChatThread
     *
     * @param sender   student sending message
     * @param receiver student receiving message
     * @param message  the String message transmitted
     */
    public ChatThread(UniversityStudent sender, UniversityStudent receiver, String message) {
        // Constructor
    }

    /**
     * Since implements Runnable, run method is executed when thread is started
     * Performs the action of messaging between sender and receiver
     */
    @Override
    public void run() {
        // Method signature only
    }
}
