import java.io.*;
import java.util.*;

/**
 * Parses data files from filename into UniversityStudent objects
* Entire class exists for one function
 */
public class DataParser {
    /**
     * Parses students contained in input file at file location filename.
     *
     * @param filename the path to input file
     * @return list of UniversityStudent instances parsed from file
     * @throws IOException if I/O error occurs while reading the file
     */
    public static List<UniversityStudent> parseStudents(String filename) throws IOException {
        return new ArrayList<>();
    }
}
