/**
 * Thread for sending and receiving a friend request
 */
public class FriendRequestThread implements Runnable {
    /**
     * Constructor for new FriendRequestThread
     *
     * @param sender student sending the friend request
     * @param receiver student receiving the friend request
     */
    public FriendRequestThread(UniversityStudent sender, UniversityStudent receiver) {
        // Constructor
    }

    /**
     * Runs the action of requesting a friend, this method is implemented from Runnable
     * interface
     */
    @Override
    public void run() {
        // Method signature only
    }
}
