import java.util.*;

/**
 * Based on preference, class to apply the Gale-Shipley algorithm to assign roommates
 */
public class GaleShapley {
    /**
     * Assigns roommates for the provided list of students
     *
     * @param students the list of students needing pairs
     */
    public static void assignRoommates(List<UniversityStudent> students) {
        
    }
}
