import java.util.*;

/**
 * Class that groups students into pods based on graph logic
 */
public class PodFormation {
    /**
     * Constructor for a new PodFormation instance.
     *
     * @param graph graph that determines student pod formation
     */
    public PodFormation(StudentGraph graph) {
        // Constructor
    }

    /**
     * Creates pods from the StudentGraph graph with the specific pod size given by the user.
     *
     * @param podSize how large each pod should be
     */
    public void formPods(int podSize) {
        // Method signature only
    }
}
