/**
 * Class representing a graph for UniversityStudents and their connections
 */
public class StudentGraph {
    
}
