import java.util.*;

/**
 * Extends the Student abstract class and implements abstract methods and additional information
 * specific to UniversityStudent
 */
public class UniversityStudent extends Student {
    // TODO: Constructor and additional methods to be implemented
}

