' Generated by UML Generator
' Encoded: dLLDRzim3BtxLmZenSMQOXytOoWwP4XHe1k2f3iDEz0oOskp9O-I0sHT__ieVzHsx7H5Bq54KezyZwHyRHsGgueyiB-KBe6W4387QpyvHogk7DvAexVg3ugtGQOI55AHp348wYYnpC3TPuIGY8T0Y3VzERIe4wH8VDDgZsILEsnTbQ1s5u9GeZVEEWkq5bACn9OhqEcvXwLAX-UHs1kL18zTxi_WO0raaPhS3yp5AVaeIcziyMouKpbgA7h0IDmfwpvEKb_rq2jINFq6VrTeH_nc7AyaUfhN3UIupQ3CyN14ZBqgrHjZYW8Ssj2s74yocc1_0QMFG0isXK2fxGJw_gExDWnBKIDnrdiclWIBxy9dX7pkullNNlpmuei42Tv1_7zzBeHhmRzMHUpxfBWpzM-lsTeaAqEik3AjTaDBoDdAp6jNGzxuKztR7KTme0rBa_W5wh373TdW3eaWNuFBLieFKfDYQZ-TIFc9xCF3UgTdvv4TARgbAKhGXvSj1CJM4KZNF0jTzhh8i-5Q-NEzjbux_f-sMz5x3mZqv2xWfnbvqn8YaPWgviU5ZzGE-PeyCzGIkousLtp7pqh2lJALlTKEITjCbTEWnS9h926NLSvuIwCrIjyu3a6Tibp6PKsXpLuUTNyeDxD-ia_KQfo31_7oyceQ5SmzBVEHexdp8SDIWfd1cOSv4JW2woWC7C6Ku6BnjtTVCml-Rlm3
' URL: http://www.plantuml.com/plantuml/uml/dLLDRzim3BtxLmZenSMQOXytOoWwP4XHe1k2f3iDEz0oOskp9O-I0sHT__ieVzHsx7H5Bq54KezyZwHyRHsGgueyiB-KBe6W4387QpyvHogk7DvAexVg3ugtGQOI55AHp348wYYnpC3TPuIGY8T0Y3VzERIe4wH8VDDgZsILEsnTbQ1s5u9GeZVEEWkq5bACn9OhqEcvXwLAX-UHs1kL18zTxi_WO0raaPhS3yp5AVaeIcziyMouKpbgA7h0IDmfwpvEKb_rq2jINFq6VrTeH_nc7AyaUfhN3UIupQ3CyN14ZBqgrHjZYW8Ssj2s74yocc1_0QMFG0isXK2fxGJw_gExDWnBKIDnrdiclWIBxy9dX7pkullNNlpmuei42Tv1_7zzBeHhmRzMHUpxfBWpzM-lsTeaAqEik3AjTaDBoDdAp6jNGzxuKztR7KTme0rBa_W5wh373TdW3eaWNuFBLieFKfDYQZ-TIFc9xCF3UgTdvv4TARgbAKhGXvSj1CJM4KZNF0jTzhh8i-5Q-NEzjbux_f-sMz5x3mZqv2xWfnbvqn8YaPWgviU5ZzGE-PeyCzGIkousLtp7pqh2lJALlTKEITjCbTEWnS9h926NLSvuIwCrIjyu3a6Tibp6PKsXpLuUTNyeDxD-ia_KQfo31_7oyceQ5SmzBVEHexdp8SDIWfd1cOSv4JW2woWC7C6Ku6BnjtTVCml-Rlm3
' Generated on: 2025-11-17T17:16:04.542155800

@startuml
skinparam classAttributeIconSize 0
hide circle

class ChatThread {
  +ChatThread(sender: UniversityStudent, receiver: UniversityStudent, message: String)
  +run(): void
}

class DataParser {
  +{static} parseStudents(filename: String): List<UniversityStudent>
}

class FriendRequestThread {
  +FriendRequestThread(sender: UniversityStudent, receiver: UniversityStudent)
  +run(): void
}

class GaleShapley {
  +{static} assignRoommates(students: List<UniversityStudent>): void
}

class Main {
  +{static} main(args: String[]): void
  +{static} generateTestCase1(): List<UniversityStudent>
  +{static} generateTestCase2(): List<UniversityStudent>
  +{static} generateTestCase3(): List<UniversityStudent>
  +{static} gradeLab(students: List<UniversityStudent>, testCaseNumber: int): int
}

class PodFormation {
  +PodFormation(graph: StudentGraph)
  +formPods(podSize: int): void
}

class ReferralPathFinder {
  +ReferralPathFinder(graph: StudentGraph)
  +findReferralPath(start: UniversityStudent, targetCompany: String): List<UniversityStudent>
}

abstract class Student {
  #name: String
  #age: int
  #gender: String
  #year: int
  #major: String
  #gpa: double
  #roommatePreferences: List<String>
  #previousInternships: List<String>
  --
  +calculateConnectionStrength(other: Student): int
}

class StudentGraph {
}

class UniversityStudent {
}

ChatThread ..> UniversityStudent
FriendRequestThread ..> UniversityStudent
PodFormation ..> StudentGraph
ReferralPathFinder ..> UniversityStudent
ReferralPathFinder ..> StudentGraph
Student ..> Student
UniversityStudent --|> Student
@enduml